# vault-password-forge

./: .dockerignore  LICENSE  dockerfile  readme.md
Backend/: Cargo.toml  Dockerfile  start.sh
Backend/src/: main.rs
frontend/: .gitignore  README.md  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FaviconLoader.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  PasswordGenerator.tsx  SecurityFeatures.tsx  SecurityMeter.tsx  ThemeToggle.tsx
frontend/src/pages/: Index.tsx
frontend/src/providers/: ThemeProvider.tsx
frontend/src/services/: passwordService.ts
