[package]
name = "Rustpassword"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
sha1 = "0.10.5"
tower-http = { version = "0.5.0", features = ["cors"] }

